--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -8,7 +8,7 @@
     flex-direction: column;
 
     .top {
-        padding: 15px;
+        padding: 15px; /* reduced padding */
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -17,11 +17,11 @@
         .user {
             display: flex;
             align-items: center;
-            gap: 15px;
+            gap: 15px; 
 
             img {
-                width: 50px;
-                height: 50px;
+                width: 50px; 
+                height: 50px; 
                 border-radius: 50%;
                 object-fit: cover;
             }
@@ -29,15 +29,14 @@
             .texts {
                 display: flex;
                 flex-direction: column;
-                gap: 3px;
-
+                gap: 3px; 
                 span {
-                    font-size: 16px;
+                    font-size: 16px; 
                     font-weight: bold;
                 }
 
                 p {
-                    font-size: 12px;
+                    font-size: 12px; 
                     font-weight: 300;
                     color: #a5a5a5;
                 }
@@ -46,37 +45,38 @@
 
         .icons {
             display: flex;
-            gap: 15px;
+            gap: 15px; 
 
             img {
-                width: 18px;
-                height: 18px;
+                width: 18px; 
+                height: 18px; 
                 cursor: pointer;
             }
         }
     }
 
     .center {
-        padding: 15px;
+        padding: 15px; 
         flex: 1;
-        overflow-y: auto;
-        scrollbar-width: none;
+        overflow-y: auto; 
+        scrollbar-width: none; 
         display: flex;
         flex-direction: column;
         gap: 15px;
 
         .message {
-            max-width: 70%;
+            max-width: 60%; 
             display: flex;
-            gap: 15px;
-            align-self: flex-start;
+            gap: 15px; 
+            align-self: flex-start; 
 
+            
             &.own {
                 align-self: flex-end;
 
                 .texts {
                     p {
-                        background-color: #5183fe;
+                        background-color: #5183fe; 
                         color: white;
                         text-align: left;
                     }
@@ -86,15 +86,15 @@
             &:not(.own) {
                 .texts {
                     p {
-                        background-color: rgba(17, 25, 40, 0.3);
+                        background-color: rgba(17, 25, 40, 0.3); 
                         text-align: left;
                     }
                 }
             }
 
             img {
-                width: 25px;
-                height: 25px;
+                width: 25px; 
+                height: 25px; 
                 border-radius: 50%;
                 object-fit: cover;
             }
@@ -103,44 +103,44 @@
                 flex: 1;
                 display: flex;
                 flex-direction: column;
-                gap: 3px;
+                gap: 3px; 
 
                 img {
-                    width: 100%;
-                    height: 250px;
-                    border-radius: 8px;
+                    width: 80%; 
+                    height: 200px;
+                    border-radius: 8px; 
                     object-fit: cover;
                 }
 
                 p {
-                    padding: 15px;
-                    border-radius: 8px;
+                    padding: 15px; 
+                    border-radius: 8px; 
                 }
 
                 span {
-                    font-size: 12px;
+                    font-size: 12px; 
                 }
             }
         }
     }
 
     .bottom {
-        padding: 15px;
+        padding: 15px; 
         display: flex;
         align-items: center;
         justify-content: space-between;
         border-top: 1px solid #dddddd35;
-        gap: 15px;
+        gap: 15px; 
         margin-top: auto;
 
         .icons {
             display: flex;
-            gap: 15px;
+            gap: 15px; 
         }
 
         img {
-            width: 18px;
-            height: 18px;
+            width: 18px; 
+            height: 18px; 
             cursor: pointer;
         }
 
@@ -149,9 +149,9 @@
             background-color: rgba(17, 25, 40, 0.5);
             border: none;
             outline: none;
-            padding: 15px;
-            border-radius: 8px;
-            font-size: 14px;
+            padding: 15px; 
+            border-radius: 8px; 
+            font-size: 14px; 
             color: white;
 
             &:disabled {
@@ -165,7 +165,7 @@
 
             .picker {
                 position: absolute;
-                bottom: 40px;
+                bottom: 40px; 
                 left: 0;
             }
         }
@@ -173,9 +173,9 @@
         .sendButton {
             background-color: #5183fe;
             color: white;
-            padding: 8px 15px;
+            padding: 8px 15px; 
             border: none;
-            border-radius: 5px;
+            border-radius: 4px; 
             cursor: pointer;
 
             &:disabled {
